--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/entity": "^6.1.0",
     "@ngrx/schematics": "^6.1.0",
     "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
