--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^6.1.0",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/entity": "^6.1.0",
-    "@ngrx/router-store": "github:ngrx/router-store-builds",
+    "@ngrx/router-store": "^6.1.0",
     "@ngrx/schematics": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
