--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/schematics": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
+    "@ngu/carousel": "^1.5.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngrx-store-freeze": "^0.2.4",
